test/fail_compilation/issue22826.d
/* TEST_OUTPUT:
---
fail_compilation/issue22826.d(6): Error: #line integer ["filespec"]\n expected
---
*/
#line 12 "issue22826.d" 3
